refactored code and added api

--- a/weather/weatherapp/templates/weatherapp/home.html
+++ b/weather/weatherapp/templates/weatherapp/home.html
@@ -1,6 +1,8 @@
 <h1>home page</h1>
 <p>Location: {{ retrieved.location }}</p>
-<p>Temperature: {{ retrieved.temp }} K</p>
-<p>Feels like: {{ retrieved.feels_like }}K</p>
-<p>Humidity: {{ retrieved.humidity }}</p>
-<p>Pressure: {{ retrieved.pressure }}</p>
+<p>Temperature: {{ retrieved.temp }} °C</p>
+<p>Feels like: {{ retrieved.feels_like }}°C</p>
+<p>Humidity: {{ retrieved.humidity }}%</p>
+<p>Pressure: {{ retrieved.pressure }}hPa</p>
+<p>Wind Speed: {{ retrieved.wind_speed }}m/s</p>
+<p>Wind Direction: {{ retrieved.wind_dir }}°</p>
