added datetime to model and link to api

--- a/weather/weatherapp/templates/weatherapp/home.html
+++ b/weather/weatherapp/templates/weatherapp/home.html
@@ -6,3 +6,4 @@
 <p>Pressure: {{ retrieved.pressure }}hPa</p>
 <p>Wind Speed: {{ retrieved.wind_speed }}m/s</p>
 <p>Wind Direction: {{ retrieved.wind_dir }}°</p>
+<p>Link to <a href="api_home/">API</p>
