--- a/ecom_website/fresh/templates/fresh/base.html
+++ b/ecom_website/fresh/templates/fresh/base.html
@@ -63,9 +63,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 					<div class="login-box">
-						<select id="basic" class="selectpicker show-tick form-control" data-placeholder="Sign In">
-							<option><a href="/register/">Register Here</a></option>
-							<option><a href="/login/">Sign In</a></option>
+						<select id="basic" class="selectpicker show-tick form-control" data-placeholder="Sign In" onchange="window.location.href=this.value;">
+							<option value = "{% url 'register' %}">Register Here</option>
+							<option value = "{% url 'login' %}">Sign In</option>
 						</select>
 					</div>
                     <div class="text-slid-box">
