--- a/ecom_website/users/templates/users/login.html
+++ b/ecom_website/users/templates/users/login.html
@@ -8,12 +8,12 @@
                 {{ form| crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign up</button>
+                <button class="btn btn-outline-info" type="submit">Sign In</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need an account?<a class="ml-2" href="{% url 'register' %}">Sign in</a>
+                Need an account? <a class="ml-2" href="{% url 'register' %}">Sign Up</a>
             </small>
         </div>
 
