--- a/ecom_website/fresh/templates/fresh/base.html
+++ b/ecom_website/fresh/templates/fresh/base.html
@@ -63,10 +63,16 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 					<div class="login-box">
+                        {% if user.is_authenticated %}
+                        <div class="button-group filter-button-group">
+                            <button class="active" data-filter="*"><a href="/logout/">Sign out</a></button>
+                        </div>
+                        {% else %}
 						<select id="basic" class="selectpicker show-tick form-control" data-placeholder="Sign In" onchange="window.location.href=this.value;">
 							<option value = "{% url 'register' %}">Register Here</option>
 							<option value = "{% url 'login' %}">Sign In</option>
 						</select>
+                        {% endif %}
 					</div>
                     <div class="text-slid-box">
                         <div id="offer-box" class="carouselTicker">
@@ -122,12 +128,13 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
                         <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about/">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/about/">About Us</a></li>
                         <li class="dropdown">
-                            <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">SHOP</a>
+                            <a href="/shop/" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">SHOP</a>
                             <ul class="dropdown-menu">
 								<li><a href="/shop/">Sidebar Shop</a></li>
-								<li><a href="/shop-detail/">Shop Detail</a></li>
+								<!-- # TODO: this needs to be changed accordingly -->
+                                <li><a href="/shop_detail/1">Shop Detail</a></li>
                                 <li><a href="/cart/">Cart</a></li>
                                 <li><a href="/checkout/">Checkout</a></li>
                                 <li><a href="/profile/">My Account</a></li>
@@ -147,7 +154,7 @@
                         <li class="side-menu">
 							<a href="/cart/">
 								<i class="fa fa-shopping-bag"></i>
-								<span class="badge">3</span>
+								<span class="badge">{{cart_obj.get_num_items}}</span>
 								<p>My Cart</p>
 							</a>
 						</li>
@@ -169,7 +176,7 @@
                         {% endfor %}
                         <li class="total">
                             <a href="/cart/" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
-                            <span class="float-right"><strong>Total</strong>: $180.00</span>
+                            <span class="float-right"><strong>Total</strong>: ${{cart_obj.subtotal}}</span>
                         </li>
                     </ul>
                 </li>
