added API functionality

--- a/ecom_website/fresh/templates/fresh/cart.html
+++ b/ecom_website/fresh/templates/fresh/cart.html
@@ -37,7 +37,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in order_item %}
+                                {% for i in cart_item %}
                                 <tr>
                                     <td class="thumbnail-img">
                                         <a href="#">
