added screns to README

--- a/ecom_website/fresh/templates/fresh/index.html
+++ b/ecom_website/fresh/templates/fresh/index.html
@@ -6,8 +6,8 @@
     <div id="slides-shop" class="cover-slides">
         <ul class="slides-container">
             <li class="text-center">
-                <img src="{% static 'fresh/images/banner-01.jpg' %}" alt="">
-                <div class="container">
+                <img src="{% static 'fresh/images/banner-01.jpg' %}" style="height:343px; width:343px;" alt="">
+                <div class="container"> 
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> Freshshop</strong></h1>
@@ -18,7 +18,7 @@
                 </div>
             </li>
             <li class="text-center">
-                <img src="{% static 'fresh/images/banner-02.jpg' %}" alt="">
+                <img src="{% static 'fresh/images/banner-02.jpg' %}" style="height:343px; width:343px;" alt="">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -30,7 +30,7 @@
                 </div>
             </li>
             <li class="text-center">
-                <img src="{% static 'fresh/images/banner-03.jpg' %}" alt="">
+                <img src="{% static 'fresh/images/banner-03.jpg' %}" style="height:343px; width:343px;" alt="">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
